--- a/jquery/tests/index.html
+++ b/jquery/tests/index.html
@@ -5,7 +5,12 @@
     <link rel="stylesheet" href="jquery-qunit/qunit/qunit.css"/>
   </head>
   <body>
-    
+    <h1 id="qunit-header">QUAIL jQuery example</h1>
+     <h2 id="qunit-banner"></h2>
+     <div id="qunit-testrunner-toolbar"></div>
+     <h2 id="qunit-userAgent"></h2>
+     <ol id="qunit-tests"></ol>
+     <div id="qunit-fixture">test markup, will be hidden</div>
     <script src="../jquery-1.7.2.js"></script>
     <script src="../quail.js"></script>
     <script src="quail-test.js"></script>
