--- a/testfiles/oac/102-1.html
+++ b/testfiles/oac/102-1.html
@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang="en"><head><title>Check #102 - Positive</title></head><body><INPUT name="num" onclick="foo" value="0" /></body></html>
+<html lang="en"><head><title>Check #102 - Positive</title></head><body><input name="num" onclick="foo" value="0" /></body></html>
