--- a/testfiles/oac/61-1.html
+++ b/testfiles/oac/61-1.html
@@ -1,3 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang="en"><head><title>Check #61 - Positive</title></head><body><form><label for="name">Name</label>: <br/><br/><input type="image" name="name" id="name" src="name.jpg" alt="name.jpg"></form></body></html>
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html lang="en"><head><title>Check #61 - Positive</title></head><body><form><label for="name">Name</label>: <br/><br/><input type="image" name="name" id="name" src="name.jpg" alt="name.jpg"></form></body></html>
