Moved to PHPUnit instead of simpletest. Sorry, simpletest.

--- a/testfiles/quail/cssContrast.html
+++ b/testfiles/quail/cssContrast.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
 <title>OAC Testfile - Check #6 - Positive</title>
-<link rel="StyleSheet" type="text/css" href="cssContrast.css"/>
+<style>
+body {
+   background: #000;
+}
 
+p {
+   color: #333;
+}
+</style>
 </head>
 <body>
 <p>This is not contrasty enough.</p>
