Revert "Moved to PHPUnit instead of simpletest. Sorry, simpletest."
This reverts commit 21ca7753285ac02e8c844700b6892cef49b8b8e7.

--- a/testfiles/quail/cssContrast.html
+++ b/testfiles/quail/cssContrast.html
@@ -2,15 +2,8 @@
 <html lang="en">
 <head>
 <title>OAC Testfile - Check #6 - Positive</title>
-<style>
-body {
-   background: #000;
-}
+<link rel="StyleSheet" type="text/css" href="cssContrast.css"/>
 
-p {
-   color: #333;
-}
-</style>
 </head>
 <body>
 <p>This is not contrasty enough.</p>
