Added more complex css tests.

--- a/testfiles/quail/cssContrast2.html
+++ b/testfiles/quail/cssContrast2.html
@@ -2,8 +2,24 @@
 <html lang="en">
 <head>
 <title>OAC Testfile - Check #6 - Positive</title>
-<link rel="StyleSheet" type="text/css" href="cssContrast2.css"/>
+<style>
+body {
+	background: #ff0b00;
+}
 
+div#test {
+	background: #212121;
+}
+
+div#test .lowcontrast {
+	color: #6a6a6a;
+}
+
+.highcontrast {
+	color: #000000;
+}
+
+</style>
 </head>
 <body>
 <div id="test">
