--- a/testfiles/quail/cssContrast3.html
+++ b/testfiles/quail/cssContrast3.html
@@ -2,7 +2,23 @@
 <html lang="en">
 <head>
 <title>OAC Testfile - Check #6 - Positive</title>
-<link rel="StyleSheet" type="text/css" href="cssContrast3.css"/>
+<style>
+body {
+	background: #ff0b00;
+}
+
+div#test {
+	background: #212121;
+}
+
+div#test .lowcontrast {
+	color: rgb(14, 14, 14);
+}
+
+.highcontrast {
+	color: white;
+}
+</style>
 
 </head>
 <body>
