Working through javascript test conversation.

--- a/testfiles/oac/96-1.html
+++ b/testfiles/oac/96-1.html
@@ -10,8 +10,8 @@
 <table width="100%">
 <tr><td>first name:</td><td align="right"><input type="text" /></td></tr>
 <tr><td>last name:</td><td align="right"><input type="text" /></td></tr>
-<tr><td>comment:</td><td align="right"><textarea rows="3" cols="20" ></textarea></td></tr>
-<tr><td colspan="2"><input type="submit" value="submit" ></td></tr>
+<tr><td><label for="test">comment:</label></td><td align="right"><textarea rows="3" cols="20" id="test"></textarea></td></tr>
+<tr><td colspan="2"><input type="submit" value="submit" /></td></tr>
 </table>
 </form>
 
