Fixed label proximité test.

--- a/testfiles/oac/96-2.html
+++ b/testfiles/oac/96-2.html
@@ -10,7 +10,8 @@
 <table>
 <tr><td>first name:</td><td><input type="text" /></td></tr>
 <tr><td>last name:</td><td><input type="text" /></td></tr>
-<tr><td>comment:</td><td align="right"><textarea rows="3" cols="20" ></textarea></td></tr>
+<tr><td>comment:</td><td align="right"><label for="text">comment:</label>
+	<textarea id="text" rows="3" cols="20" ></textarea></td></tr>
 <tr><td colspan="2"><input type="submit" value="submit" /></td></tr>
 </table>
 </form>
