--- a/testfiles/oac/122-1.html
+++ b/testfiles/oac/122-1.html
@@ -9,7 +9,7 @@
 <p>Please enter your password below:</p>
 <form action="http://www.example.com" method="post">
 <table width="100%">
-<tr><td>password:</td><td align="right"><input type="password" /></td></tr>
+<tr><td><label for="pass">password:</label></td><td align="right"><input id="pass" type="password" /></td></tr>
 <tr><td colspan="2"><input type="submit" value="submit" /></td></tr>
 </table>
 </form>
