Fixed test for formWithRequformWithRequiredLabel.

--- a/testfiles/oac/246-4.html
+++ b/testfiles/oac/246-4.html
@@ -15,7 +15,7 @@
 <form action="http://www.test.com">
 
 <p>
-<label for="firstname" class="required">First Name:</label>
+<label for="firstname" style="color: red;" class="required">First Name:</label>
 <input type="text" id="firstname"/><br/>
 <label for="lastname">Last Name:</label>
 <input type="text" id="lastname" /><br/>
