--- a/testfiles/oac/246-5.html
+++ b/testfiles/oac/246-5.html
@@ -17,7 +17,7 @@
 <p>
 <label for="firstname"><strong>First Name:</strong></label>
 <input type="text" id="firstname"/><br/>
-<label for="lastname" class="required">Last Name:</label>
+<label for="lastname" class="required" style="color: red;">Last Name:</label>
 <input type="text" id="lastname" /><br/>
 <label for="colour">Favourite Colour:</label>
 <input type="text" id="colour" /><br/>
