Added hasEventListener plugin

--- a/tests/index.html
+++ b/tests/index.html
@@ -12,6 +12,7 @@
      <ol id="qunit-tests"></ol>
      <div id="qunit-fixture">test markup, will be hidden</div>
     <script src="../jquery-1.7.2.js"></script>
+    <script src="../jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
     <script src="../quail.js"></script>
     <script src="quail-test.js"></script>
     <script src="jquery-qunit/qunit/qunit.js"></script>
