--- a/tests/index.html
+++ b/tests/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="jquery-qunit/qunit/qunit.css"/>
   </head>
   <body>
-    <h1 id="qunit-header">QUAIL jQuery example</h1>
+    <h1 id="qunit-header">QUAIL jQuery plugin</h1>
      <h2 id="qunit-banner"></h2>
      <div id="qunit-testrunner-toolbar"></div>
      <h2 id="qunit-userAgent"></h2>
