Removed doc/example references to PHP.

--- a/examples/simple.html
+++ b/examples/simple.html
@@ -11,11 +11,11 @@
 	 <img src="rex.jpg">
 	</div>
 	
-	<script src="../jquery-1.7.2.js"></script>
+	<script src="../libs/jquery.js"></script>
 	<script src="../quail.js"></script>
 	<script>
 	 $('#test').quail({ guideline : [ 'imgHasAlt' ],
-	                    jsonPath : '../../resources' });
+	                    jsonPath : '../../src/resources' });
 	</script>
 	</body>
 </html>
