--- a/test/testfiles/oac/135-3.html
+++ b/test/testfiles/oac/135-3.html
@@ -1,9 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 plus MathML 2.0//EN" "http://www.w3.org/TR/MathML2/dtd/xhtml-math11-f.dtd" [  <!ENTITY mathml "http://www.w3.org/1998/Math/MathML"> ]>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 plus MathML 2.0//EN" "http://www.w3.org/TR/MathML2/dtd/xhtml-math11-f.dtd" [
+  <!ENTITY mathml "http://www.w3.org/1998/Math/MathML"> ]>
 <html lang="en">
 	<head>
 		<title>Testfile - Check #135 - Negative</title>
-	<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen"></head>
-	<body><h2 id="qunit-banner"></h2><div id="qunit-testrunner-toolbar"></div><h2 id="qunit-userAgent"></h2><ol id="qunit-tests"></ol><div id="qunit-fixture">test markup, will be hidden</div>
+	<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
+</head>
+	<body>
+<h2 id="qunit-banner"></h2>
+<div id="qunit-testrunner-toolbar"></div>
+<h2 id="qunit-userAgent"></h2>
+<ol id="qunit-tests"></ol>
+<div id="qunit-fixture">test markup, will be hidden</div>
 		<p>The following image shows the solution to the quadratic equation: begin fraction minus b plus or 
 			minus begin square root of b squared minus four a c end square root over 2 a 
 			end fraction</p>
