--- a/test/testfiles/oac/24-2.html
+++ b/test/testfiles/oac/24-2.html
@@ -12,6 +12,7 @@
 <h2 id="qunit-userAgent"></h2>
 <ol id="qunit-tests"></ol>
 <div id="qunit-fixture">test markup, will be hidden</div>
+
 <script src="../../../libs/jquery/jquery.js"></script>
 <script src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script src="../../../src/quail.js"></script>
@@ -20,7 +21,7 @@
 <script>
 test('appletTextEquivalentsGetUpdated', function() {
   quailTest.runTest( 'appletTextEquivalentsGetUpdated', '23-2.html');
-  equal(true, quailTest.confirmIsTag('applet'), 'First item tag test');
+  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
 });
 </script>
 </body>
