Added text statistics and reading level as a test. Fixes #8.

--- a/test/quail.html
+++ b/test/quail.html
@@ -774,7 +774,7 @@
     "testfiles/oac/271-1.html",
     "testfiles/oac/271-2.html",
     "testfiles/oac/272-1.html",
-    "testfiles/oac/272-2.html"
+    "testfiles/oac/272-2.html",
     /*
     "testfiles/oac/273-1.html",
     "testfiles/oac/273-2.html",
@@ -793,6 +793,9 @@
     "testfiles/oac/276-2.html",
     "testfiles/oac/276-3.html"
     */
+    "testfiles/quail/documentIsWrittenClearly-pass.html",
+    "testfiles/quail/documentIsWrittenClearly-fail.html",
+    "testfiles/quail/documentIsWrittenClearly-pass-2.html"
    	]);
 	</script>
 </head>
