--- a/test/quail.html
+++ b/test/quail.html
@@ -11,6 +11,7 @@
 
 	<script>
 	QUnit.testSuites([
+	  "testfiles/quail/eventTester.html",
     "testfiles/oac/1-1.html",
     "testfiles/oac/1-2.html",
     "testfiles/oac/2-1.html",
