Changed the event handling callback to use an object because options were getting too long. Used to go crazy on aloha example.

--- a/examples/aloha.html
+++ b/examples/aloha.html
@@ -43,10 +43,15 @@
   		$('.aloha-editable-active').quail({ guideline : [ 'imgHasAlt', 'documentAbbrIsUsed' ],
 	                    jsonPath : '../src/resources',
 	                    accessibilityTests : accessibilityTests,
-	                    callback : function(element, testName, severity) {
-  	                    element.addClass('quail-result')
-  	                           .addClass(severity);
+	                    callback : function(event) {
   	                    
+  	                    if(event.testName == 'documentAbbrIsUsed') {
+    	                    event.element.html(event.element.html().replace(event.options.acronym, '<span class="quail-result moderate">' + event.options.acronym + '</span>'));
+  	                    }
+  	                    else {
+    	                    event.element.addClass('quail-result')
+  	                           .addClass(event.severity);
+  	                    }
 	                    }});
 		};
 		
