Fixed test for liDontUseImageFOrBullet

--- a/test/quail.html
+++ b/test/quail.html
@@ -13,6 +13,8 @@
 	QUnit.testSuites([
 	  "testfiles/quail/eventComplete.html",
 	  "testfiles/quail/eventTester.html",
+	  "testfiles/quail/liDontUseImageForBullet-fail.html",
+	  "testfiles/quail/liDontUseImageForBullet-pass.html",
     "testfiles/oac/1-1.html",
     "testfiles/oac/1-2.html",
     "testfiles/oac/2-1.html",
