Added tests for headers have text.

--- a/test/quail.html
+++ b/test/quail.html
@@ -13,6 +13,9 @@
 	QUnit.testSuites([
 	  "testfiles/quail/eventComplete.html",
 	  "testfiles/quail/eventTester.html",
+    "testfiles/quail/headersHaveText-fail.html",
+    "testfiles/quail/headersHaveText-fail2.html",
+    "testfiles/quail/headersHaveText-pass.html",
 	  "testfiles/quail/liDontUseImageForBullet-fail.html",
 	  "testfiles/quail/liDontUseImageForBullet-pass.html",
     "testfiles/oac/1-1.html",
