Added test for orphaned label elements.

--- a/test/quail.html
+++ b/test/quail.html
@@ -18,6 +18,10 @@
     "testfiles/quail/headersHaveText-pass.html",
 	  "testfiles/quail/liDontUseImageForBullet-fail.html",
 	  "testfiles/quail/liDontUseImageForBullet-pass.html",
+	  "testfiles/quail/labelsAreAssignedToAnInput-pass.html",
+	  "testfiles/quail/labelsAreAssignedToAnInput-fail.html",
+	  "testfiles/quail/labelsAreAssignedToAnInput-fail2.html",
+	  "testfiles/quail/labelsAreAssignedToAnInput-fail3.html",
     "testfiles/oac/1-1.html",
     "testfiles/oac/1-2.html",
     "testfiles/oac/2-1.html",
