--- a/test/testfiles/quail/headersHaveText-fail2.html
+++ b/test/testfiles/quail/headersHaveText-fail2.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Header has text - Fail</title>
+	<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 	</head>
 	<body>
 	<div id="qunit-testrunner-toolbar"></div>
