Fixed adding guidelines using JSON.

--- a/test/quail.html
+++ b/test/quail.html
@@ -11,6 +11,7 @@
 
 	<script>
 	QUnit.testSuites([
+	  "testfiles/quail/guidelineLoading.html",
 	  "testfiles/quail/eventComplete.html",
 	  "testfiles/quail/eventTester.html",
     "testfiles/quail/headersHaveText-fail.html",
