Made plugin cleanup after itself.

--- a/examples/wysiwyg/tinymce.html
+++ b/examples/wysiwyg/tinymce.html
@@ -30,7 +30,10 @@
           }
        },
        guideline : [ 'imgAltNotEmptyInAnchor' ],
-	     jsonPath  : '../../src/resources'
+	     jsonPath  : '../../src/resources',
+	     tinyMCEMessage : function(event) {
+  	     return 'Event fired ' + event.testName;
+	     }
 	    };
   	  tinyMCE.init({
         // General options
