--- a/examples/wysiwyg/aloha.html
+++ b/examples/wysiwyg/aloha.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>TinyMCE Example</title>
+		<title>Aloha Editor Example</title>
 	<link rel="stylesheet" href="editors/aloha/aloha/css/aloha.css" type="text/css">
+	<link rel="stylesheet" href="editors/aloha/aloha/demo/simple/index.css" type="text/css">
 		<link rel="stylesheet" href="../common/style.css"/>
 	</head>
 	<body>
-	<div id="test">
+	<div id="main">
 	 <div id="content"><p>Here is a picture of my dog, Kogepan:</p>
 		<p>
 		  <img src="../common/kogepan.png">
@@ -21,13 +22,35 @@
 	<script src="../../libs/jquery/jquery.js"></script>
 	<script src="editors/aloha/aloha/lib/require.js"></script>
 	<script src="editors/aloha/aloha/lib/vendor/jquery-1.7.2.js"></script>
-	<script src="editors/aloha/aloha/lib/aloha.js" data-aloha-plugins="common/ui,common/format,common/highlighteditables,common/link"></script>
+	<script src="editors/aloha/aloha/lib/aloha.js" data-aloha-plugins="common/ui,common/format,common/highlighteditables,common/link,extra/quail"></script>
 	<script src="../../src/quail.js"></script>
-	<script type="text/javascript" >
+	<script type="text/javascript">
+	 Aloha.settings.quail = {
+  	 tests : {
+        "imgHasAlt": {
+            "type": "selector",
+            "selector": "img:not(img[alt])",
+            "severity": "severe",
+            "title" : "This image is missing an alt text."
+        },      
+        "documentAbbrIsUsed": {
+            "type": "custom",
+            "callback": "documentAbbrIsUsed",
+            "severity": "moderate",
+            "title" : "You need to add an abbreviation tag here."
+        },
+     },
+     guideline : [ 'imgHasAlt', 'documentAbbrIsUsed' ],
+     path : '../../src/resources',
+     baseUrl : '../../src/wysiwyg_plugins/',
+     title : function(event) {
+       return event.testName;
+     }
+	 }
+	 
 	 Aloha.ready( function() { 
-		Aloha.jQuery('#content').aloha();
-		
-	});
+     Aloha.jQuery('#content').aloha();	
+	 });
 
   </script >
 	</body>
