--- a/test/testfiles/oac/56-1.html
+++ b/test/testfiles/oac/56-1.html
@@ -3,5 +3,5 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
+<script id="qunit-script">test('inputTextHasLabel', function() {  quailTest.runTest( 'inputTextHasLabel', '56-1.html');  equal(true, quailTest.confirmIsTag('input'), 'First item tag test');});</script>
 </body></html>
