Improved method of telling if a table is being used for layout.

--- a/test/quail.html
+++ b/test/quail.html
@@ -340,6 +340,8 @@
     "testfiles/oac/114-1.html",
     "testfiles/oac/114-2.html",
     "testfiles/oac/114-3.html",
+    "testfiles/oac/114-4.html",
+    "testfiles/oac/114-5.html",
     "testfiles/oac/115-1.html",
     "testfiles/oac/115-2.html",
     "testfiles/oac/116-1.html",
