Added test to find appropriate use of scoping in row headers in tables. Fixes #16.

--- a/test/quail.html
+++ b/test/quail.html
@@ -23,6 +23,9 @@
 	  "testfiles/quail/labelsAreAssignedToAnInput-fail.html",
 	  "testfiles/quail/labelsAreAssignedToAnInput-fail2.html",
 	  "testfiles/quail/labelsAreAssignedToAnInput-fail3.html",
+	  "testfiles/quail/tableUsesScopeForRow-fail.html",
+	  "testfiles/quail/tableUsesScopeForRow-fail2.html",
+	  "testfiles/quail/tableUsesScopeForRow-pass.html",
     "testfiles/oac/1-1.html",
     "testfiles/oac/1-2.html",
     "testfiles/oac/2-1.html",
