--- a/test/quail.html
+++ b/test/quail.html
@@ -26,6 +26,8 @@
 	  "testfiles/quail/tableUsesScopeForRow-fail.html",
 	  "testfiles/quail/tableUsesScopeForRow-fail2.html",
 	  "testfiles/quail/tableUsesScopeForRow-pass.html",
+	  "testfiles/quail/svgContainsTitle-pass.html",
+	  "testfiles/quail/svgContainsTitle-fail.html",
     "testfiles/oac/1-1.html",
     "testfiles/oac/1-2.html",
     "testfiles/oac/2-1.html",
