--- a/test/testfiles/quail/svgContainsTitle-fail.html
+++ b/test/testfiles/quail/svgContainsTitle-fail.html
@@ -4,6 +4,11 @@
 		<title>SVG Contains Title - Fail</title>
 	</head>
 	<body>
+	<div id="qunit-testrunner-toolbar"></div>
+  <h2 id="qunit-userAgent"></h2>
+  <ol id="qunit-tests"></ol>
+  <div id="qunit-fixture">test markup, will be hidden</div>
+
 	<svg xmlns="http://www.w3.org/2000/svg" version="1.1"  
 	viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice"  
 	style="width:100%; height:100%; position:absolute; top:0; left:0; z-index:-1;">  
@@ -14,5 +19,17 @@
 	<rect x="0" y="0" width="100" height="100" style="fill:url(#gradient)" />  
 	<circle cx="50" cy="50" r="30" style="fill:url(#gradient)" />  
 	</svg>  
+
+	<script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
+	<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
+  <script id="qunit-quail" src="../../../src/quail.js"></script>
+  <script id="qunit-composite" src="../../composite.js"></script>
+  <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
+  <script id="qunit-script">
+  test('svgContainsTitle', function() {
+    quailTest.runTest( 'svgContainsTitle', 'svgContainsTitle-pass.html');
+    equal(true, quailTest.confirmIsTag('svg'), 'SVG is missing title');    
+  });
+  </script>
 	</body>
 </html>
