Added select jump menu test. Related to #17.

--- a/test/quail.html
+++ b/test/quail.html
@@ -28,6 +28,8 @@
 	  "testfiles/quail/tableUsesScopeForRow-pass.html",
 	  "testfiles/quail/svgContainsTitle-pass.html",
 	  "testfiles/quail/svgContainsTitle-fail.html",
+	  "testfiles/quail/selectJumpMenus-pass.html",
+	  "testfiles/quail/selectJumpMenus-fail.html",
     "testfiles/oac/1-1.html",
     "testfiles/oac/1-2.html",
     "testfiles/oac/2-1.html",
