--- a/test/testfiles/quail/selectJumpMenus-fail.html
+++ b/test/testfiles/quail/selectJumpMenus-fail.html
@@ -2,13 +2,30 @@
 <html>
 	<head>
 		<title>no select jump menus - fail</title>
+	<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 	</head>
 	<body>
+	<div id="qunit-testrunner-toolbar"></div>
+<h2 id="qunit-userAgent"></h2>
+<ol id="qunit-tests"></ol>
+<div id="qunit-fixture">test markup, will be hidden</div>
+
 	<form>
-		<select id="jumpie" name="jumpie">
+		<select id="jumpie" name="jumpie" onchange="MM_jumpMenu('parent',this,1);">
 			<option value="home.html">Home</option>
 			<option	value="rex.html">Rex</option>
 		</select>
 	</form>
+	<script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
+	<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
+  <script id="qunit-quail" src="../../../src/quail.js"></script>
+  <script id="qunit-composite" src="../../composite.js"></script>
+  <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
+  <script id="qunit-script">
+  test('selectJumpMenu', function() {
+    quailTest.runTest( 'selectJumpMenu', 'selectJumpMenu-fail.html');
+    equal(true, quailTest.confirmIsTag('select'), 'Jump menu');    
+  });
+  </script>
 	</body>
 </html>
