--- a/test/testfiles/quail/imgAltTextNotRedundant-fail.html
+++ b/test/testfiles/quail/imgAltTextNotRedundant-fail.html
@@ -2,9 +2,25 @@
 <html>
 	<head>
 		<title>Image alt attributes are not redundant unless the image files are the same - fail</title>
+	<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 	</head>
 	<body>
-	<img src="rex.jpg" alt="this is an image of rex">
-	<img src="me.jpg" alt="this is an image of rex">
+	<div id="qunit-testrunner-toolbar"></div>
+<h2 id="qunit-userAgent"></h2>
+<ol id="qunit-tests"></ol>
+<div id="qunit-fixture">test markup, will be hidden</div>
+	<img src="../oac/rex.jpg" alt="this is an image of rex">
+	<img src="../oac/me.jpg" alt="this is an image of rex">
+	<script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
+	<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
+<script id="qunit-quail" src="../../../src/quail.js"></script>
+<script id="qunit-composite" src="../../composite.js"></script>
+<script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
+<script id="qunit-script">
+test('imgAltTextNotRedundant', function() {
+  quailTest.runTest( 'imgAltTextNotRedundant', 'imgAltTextNotRedundant-fail.html');
+  equal(true, quailTest.confirmIsTag('img'), 'First item is an image');
+});
+</script>
 	</body>
 </html>
