--- a/test/testfiles/quail/textIsNotSmall-pass.html
+++ b/test/testfiles/quail/textIsNotSmall-pass.html
@@ -2,10 +2,27 @@
 <html>
 	<head>
 		<title>Text size is not too small - pass</title>
+	<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 	</head>
 	<body>
+		<div id="qunit-testrunner-toolbar"></div>
+<h2 id="qunit-userAgent"></h2>
+<ol id="qunit-tests"></ol>
+<div id="qunit-fixture">test markup, will be hidden</div>
 	<p>
 		This text is fine.
 	</p>
+	<script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
+	<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
+  <script id="qunit-quail" src="../../../src/quail.js"></script>
+  <script id="qunit-composite" src="../../composite.js"></script>
+  <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
+  <script id="qunit-script">
+  test('textIsNotSmall', function() {
+    quailTest.runTest( 'textIsNotSmall', 'textIsNotSmall-pass.html');
+    equal(true, quailTest.confirmIsEmpty(), 'Item is empty');    
+  });
+  </script>
+
 	</body>
 </html>
