Added video caption test, uses the JS API for YouTube for right now. Related to #17.

--- a/test/quail.html
+++ b/test/quail.html
@@ -30,6 +30,8 @@
 	  "testfiles/quail/svgContainsTitle-fail.html",
 	  "testfiles/quail/selectJumpMenus-pass.html",
 	  "testfiles/quail/selectJumpMenus-fail.html",
+	  "testfiles/quail/videosEmbeddedOrLinkedNeedCaptions-pass.html",
+	  "testfiles/quail/videosEmbeddedOrLinkedNeedCaptions-fail.html",
     "testfiles/oac/1-1.html",
     "testfiles/oac/1-2.html",
     "testfiles/oac/2-1.html",
