--- a/test/testfiles/quail/videosEmbeddedOrLinkedNeedCaptions-fail.html
+++ b/test/testfiles/quail/videosEmbeddedOrLinkedNeedCaptions-fail.html
@@ -2,8 +2,24 @@
 <html>
 	<head>
 		<title>Vide links are captioned - Fail</title>
+	<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 	</head>
 	<body>
+		<div id="qunit-testrunner-toolbar"></div>
+<h2 id="qunit-userAgent"></h2>
+<ol id="qunit-tests"></ol>
+<div id="qunit-fixture">test markup, will be hidden</div>
 	<p>Hey, check <a href="http://www.youtube.com/watch?v=V1HSNV9y25A">Out this awesome video.</a></p>
+	<script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
+	<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
+  <script id="qunit-quail" src="../../../src/quail.js"></script>
+  <script id="qunit-composite" src="../../composite.js"></script>
+  <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
+  <script id="qunit-script">
+  test('videosEmbeddedOrLinkedNeedCaptions', function() {
+    quailTest.runTest( 'videosEmbeddedOrLinkedNeedCaptions', 'videosEmbeddedOrLinkedNeedCaptions-fail.html');
+    equal(true, quailTest.confirmIsTag('a'), 'link to captionless video');    
+  });
+  </script>
 	</body>
 </html>
