--- a/test/testfiles/quail/videosEmbeddedOrLinkedNeedCaptions-pass.html
+++ b/test/testfiles/quail/videosEmbeddedOrLinkedNeedCaptions-pass.html
@@ -2,9 +2,25 @@
 <html>
 	<head>
 		<title>Vide links are captioned - Pass</title>
+	<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 	</head>
 	<body>
+		<div id="qunit-testrunner-toolbar"></div>
+<h2 id="qunit-userAgent"></h2>
+<ol id="qunit-tests"></ol>
+<div id="qunit-fixture">test markup, will be hidden</div>
 	<p>Hey, check <a href="http://youtube.com/watch?v=zJOS0sV2a24">Out this awesome video.</a></p>
 	<p>There's also <a href="http://youtube.com/help">another link to throw you off.</a></p>
+	<script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
+	<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
+  <script id="qunit-quail" src="../../../src/quail.js"></script>
+  <script id="qunit-composite" src="../../composite.js"></script>
+  <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
+  <script id="qunit-script">
+  test('videosEmbeddedOrLinkedNeedCaptions', function() {
+    quailTest.runTest( 'videosEmbeddedOrLinkedNeedCaptions', 'videosEmbeddedOrLinkedNeedCaptions-pass.html');
+    equal(true, quailTest.confirmIsEmpty(), 'Item is empty');    
+  });
+  </script>
 	</body>
 </html>
