Removed duplicitous readability test. Fixes #17.

--- a/test/quail.html
+++ b/test/quail.html
@@ -32,6 +32,9 @@
 	  "testfiles/quail/selectJumpMenus-fail.html",
 	  "testfiles/quail/videosEmbeddedOrLinkedNeedCaptions-pass.html",
 	  "testfiles/quail/videosEmbeddedOrLinkedNeedCaptions-fail.html",
+	  "testfiles/quail/documentIsWrittenClearly-pass.html",
+	  "testfiles/quail/documentIsWrittenClearly-fail.html",
+	  "testfiles/quail/documentIsWrittenClearly-pass-2.html",
     "testfiles/oac/1-1.html",
     "testfiles/oac/1-2.html",
     "testfiles/oac/2-1.html",
