Added additional license comments, plus copyright.

--- a/test/quail.html
+++ b/test/quail.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<!-- ! QUAIL quail-lib.org | quail-lib.org/license -->
 	<meta charset="UTF-8" />
 	<title>Quail test suites</title>
 
