Added test for not using tables for layout. Closing #14

--- a/test/quail.html
+++ b/test/quail.html
@@ -36,6 +36,9 @@
 	  "testfiles/quail/documentIsWrittenClearly-pass.html",
 	  "testfiles/quail/documentIsWrittenClearly-fail.html",
 	  "testfiles/quail/documentIsWrittenClearly-pass-2.html",
+	  "testfiles/quail/tableNotUsedForLayout-pass.html",
+	  "testfiles/quail/tableNotUsedForLayout-fail.html",
+	  "testfiles/quail/tableNotUsedForLayout-fail2.html",
     "testfiles/oac/1-1.html",
     "testfiles/oac/1-2.html",
     "testfiles/oac/2-1.html",
