Added tests for OAC 17: Links to sound files need images.

--- a/test/testfiles/oac/17-3.html
+++ b/test/testfiles/oac/17-3.html
@@ -5,5 +5,5 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
+<script>test('aLinksToSoundFilesNeedTranscripts', function() {  quailTest.runTest( 'aLinksToSoundFilesNeedTranscripts', '17-1.html');  equal(true, quailTest.confirmIsTag('a'), 'First item is an image');});</script>
 </body></html>
