--- a/test/testfiles/oac/19-1.html
+++ b/test/testfiles/oac/19-1.html
@@ -3,8 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <title>Check #19 - Positive</title>
-<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen"></head>
-<body><h2 id="qunit-banner"></h2><div id="qunit-testrunner-toolbar"></div><h2 id="qunit-userAgent"></h2><ol id="qunit-tests"></ol><div id="qunit-fixture">test markup, will be hidden</div>
+<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
+</head>
+<body>
+<h2 id="qunit-banner"></h2>
+<div id="qunit-testrunner-toolbar"></div>
+<h2 id="qunit-userAgent"></h2>
+<ol id="qunit-tests"></ol>
+<div id="qunit-fixture">test markup, will be hidden</div>
 <p>We have more information <a href="dogs.html">about</a> dogs.</p>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
