--- a/test/testfiles/oac/19-3.html
+++ b/test/testfiles/oac/19-3.html
@@ -5,5 +5,9 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
-</body></html>
+<script>
+test('aLinksMakeSenseOutOfContext', function() {
+  quailTest.runTest( 'aLinksMakeSenseOutOfContext', '19-1.html');
+  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
+});
+</script></body></html>
