--- a/test/testfiles/oac/113-1.html
+++ b/test/testfiles/oac/113-1.html
@@ -28,7 +28,12 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
+<script>
+test('tableSummaryIsNotTooLong', function() {
+	  quailTest.runTest( 'tableSummaryIsNotTooLong', '112-2.html');
+	  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
+});
+</script>
 </body>
 </html>
 
