--- a/test/testfiles/oac/113-2.html
+++ b/test/testfiles/oac/113-2.html
@@ -28,7 +28,12 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
+<script>
+test('tableSummaryIsNotTooLong', function() {
+	  quailTest.runTest( 'tableSummaryIsNotTooLong', '111-1.html');
+	  equal(true, quailTest.confirmIsTag('table'), 'First item tag test');
+});
+</script>
 </body>
 </html>
 
