--- a/test/testfiles/oac/162-1.html
+++ b/test/testfiles/oac/162-1.html
@@ -19,7 +19,12 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
+<script>
+test('emoticonsMissingAbbr', function() {
+	  quailTest.runTest( 'emoticonsMissingAbbr', '161-2.html');
+	  equal(true, quailTest.confirmIsTag('p'), 'Document is set');
+});
+</script>
 </body>
 </html>
 
