--- a/test/testfiles/oac/72-1.html
+++ b/test/testfiles/oac/72-1.html
@@ -20,8 +20,8 @@
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
 <script id="qunit-script">
 test('documentMetaNotUsedWithTimeout', function() {
-  quailTest.runTest( 'documentMetaNotUsedWithTimeout', '72-1.html');
-  equal(true, quailTest.confirmIsTag('html'), 'Document is set');
+  quailTest.runTest('documentMetaNotUsedWithTimeout', '72-1.html');
+  equal(true, quailTest.confirmIsTag('meta'), 'Meta link');
 });
 </script>
 </body>
