Added back test for OAC 197 per #20.

--- a/test/testfiles/oac/197-3.html
+++ b/test/testfiles/oac/197-3.html
@@ -18,6 +18,11 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
+<script>
+test('aSuspiciousLinkText', function() {
+	  quailTest.runTest( 'aSuspiciousLinkText', '197-3.html');
+	  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
+});
+</script>
 </body>
 </html>
