--- a/test/testfiles/oac/197-4.html
+++ b/test/testfiles/oac/197-4.html
@@ -18,7 +18,12 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
+<script>
+test('aSuspiciousLinkText', function() {
+	  quailTest.runTest( 'aSuspiciousLinkText', '197-4.html');
+	  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
+});
+</script>
 </body>
 </html>
 
