--- a/test/testfiles/oac/204-2.html
+++ b/test/testfiles/oac/204-2.html
@@ -23,7 +23,12 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
+<script>
+test('radioHasLabel', function() {
+	  quailTest.runTest( 'radioHasLabel', '204-1.html');
+	  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
+});
+</script>
 </body>
 </html>
 
