--- a/test/testfiles/oac/207-1.html
+++ b/test/testfiles/oac/207-1.html
@@ -23,7 +23,12 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
+<script>
+test('passwordHasLabel', function() {
+	  quailTest.runTest( 'passwordHasLabel', '204-1.html');
+	  equal(true, quailTest.confirmIsTag('input'), 'First item tag test');
+});
+</script>
 </body>
 </html>
 
