--- a/test/testfiles/oac/248-3.html
+++ b/test/testfiles/oac/248-3.html
@@ -20,6 +20,11 @@
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
-<script></script>
+<script>
+test('documentVisualListsAreMarkedUp', function() {
+	  quailTest.runTest( 'documentVisualListsAreMarkedUp', '248-2.html');
+	  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
+});
+</script>
 </body>
 </html>
